Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0 Beta3
-
None
-
25965e847 (dev), 8632cf766 (6.8), c3b650c4e (6.8.0)
Description
Clicking the Toggle animation does not animate in tst_directional if something is selected unless the graph is rotated manually.
If there is no selection (and nothing has been selected before) it animates. With "static optimization" toggled off it does not animate even without a selection.